--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UNA Package Tracker - Login</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <!-- Updated to modern dark blue theme with tabbed interface -->
@@ -95,7 +95,7 @@
         </div>
     </div>
     
-    <script src="api-client.js"></script>
-    <script src="login.js"></script>
+    <script src="scripts/api-client.js"></script>
+    <script src="scripts/login.js"></script>
 </body>
 </html>
