--- a/public/student-dashboard.html
+++ b/public/student-dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UNA Package Tracker - My Packages</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <div class="dashboard">
@@ -45,7 +45,7 @@
         </div>
     </div>
     
-    <script src="api-client.js"></script>
-    <script src="student.js"></script>
+    <script src="scripts/api-client.js"></script>
+    <script src="scripts/student.js"></script>
 </body>
 </html>
