--- a/public/worker-dashboard.html
+++ b/public/worker-dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UNA Package Tracker - Worker Dashboard</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <div class="dashboard">
@@ -193,7 +193,7 @@
     </div>
     
     <!-- Add API client before worker.js -->
-    <script src="api-client.js"></script>
-    <script src="worker.js"></script>
+    <script src="scripts/api-client.js"></script>
+    <script src="scripts/worker.js"></script>
 </body>
 </html>
