--- a/public/worker-dashboard.html
+++ b/public/worker-dashboard.html
@@ -63,6 +63,7 @@
                                     <th>Student/Staff Name</th>
                                     <th>L Number</th>
                                     <th>Tracking Code</th>
+                                    <th>Carrier</th>
                                     <th>Mailbox #</th>
                                     <th>Status</th>
                                     <th>Actions</th>
@@ -233,6 +234,7 @@
     <script src="https://unpkg.com/html5-qrcode@latest/html5-qrcode.min.js"></script>
     <!-- Add API client before worker.js -->
     <script src="scripts/api-client.js"></script>
+    <script src="scripts/carrier-detection.js"></script>
     <script src="scripts/barcode-scanner.js"></script>
     <script src="scripts/worker.js"></script>
 </body>
