--- a/public/index.html
+++ b/public/index.html
@@ -27,20 +27,20 @@
             </div>
 
             <div class="tabs mb-4">
-                <button class="tab-btn active" data-tab="student">Student/Staff</button>
-                <button class="tab-btn" data-tab="worker">Mailroom</button>
+                <button class="tab-btn active" data-tab="student">Student Login</button>
+                <button class="tab-btn" data-tab="worker">Worker Login</button>
             </div>
             
             <!-- Student/Staff Login Form -->
             <form id="studentLoginForm" class="login-form active">
                 <div class="mb-3">
-                    <label for="studentId" class="form-label">Email</label>
+                    <label for="studentEmail" class="form-label">University Email</label>
                     <input
-                        type="text"
-                        id="studentId"
-                        name="studentId"
+                        type="email"
+                        id="studentEmail"
+                        name="studentEmail"
                         class="form-control"
-                        placeholder="example@una.edu"
+                        placeholder="yourname@una.edu"
                         required
                     >
                 </div>
@@ -66,13 +66,13 @@
             <!-- Worker Login Form -->
             <form id="workerLoginForm" class="login-form">
                 <div class="mb-3">
-                    <label for="workerEmail" class="form-label">Email</label>
+                    <label for="workerEmail" class="form-label">University Email</label>
                     <input
                         type="email"
                         id="workerEmail"
                         name="workerEmail"
                         class="form-control"
-                        placeholder="example@una.edu"
+                        placeholder="yourname@una.edu"
                         required
                     >
                 </div>
@@ -94,7 +94,7 @@
                     Sign In
                 </button>
             </form>
-            
+
             <div id="errorMessage" class="error-message mt-3"></div>
 
             <div class="footer-info mt-4">
