--- a/public/worker-dashboard.html
+++ b/public/worker-dashboard.html
@@ -29,10 +29,10 @@
                         <button class="nav-btn active mb-2" onclick="showSection('packages')">
                             <span class="icon">📦</span> Packages
                         </button>
-                        <button class="nav-btn mb-2" onclick="showSection('recipients')">
+                        <button class="nav-btn mb-2 recipients-section" onclick="showSection('recipients')" data-permission="recipients:read">
                             <span class="icon">👥</span> Recipients
                         </button>
-                        <button class="nav-btn" onclick="showSection('scan')">
+                        <button class="nav-btn scan-section" onclick="showSection('scan')" data-permission="packages:create">
                             <span class="icon">📷</span> Scan Package
                         </button>
                     </div>
@@ -77,10 +77,10 @@
                 </section>
                 
                 <!-- Recipients Section -->
-                <section id="recipientsSection" class="content-section">
+                <section id="recipientsSection" class="content-section recipients-section" data-permission="recipients:read">
                     <div class="d-flex justify-content-between align-items-center mb-4">
                         <h2 class="mb-0">Recipient Management</h2>
-                        <button class="btn btn-primary" onclick="showAddRecipientModal()">
+                        <button class="btn btn-primary" onclick="showAddRecipientModal()" data-permission="recipients:create">
                             + Add Recipient
                         </button>
                     </div>
@@ -115,7 +115,7 @@
                 </section>
                 
                 <!-- Scan Package Section -->
-                <section id="scanSection" class="content-section">
+                <section id="scanSection" class="content-section scan-section" data-permission="packages:create">
                     <div class="mb-4">
                         <h2>Scan Package</h2>
                     </div>
@@ -234,6 +234,7 @@
     <script src="https://unpkg.com/html5-qrcode@latest/html5-qrcode.min.js"></script>
     <!-- Add API client before worker.js -->
     <script src="scripts/api-client.js"></script>
+    <script src="scripts/permissions.js"></script>
     <script src="scripts/carrier-detection.js"></script>
     <script src="scripts/barcode-scanner.js"></script>
     <script src="scripts/worker.js"></script>
