--- a/public/student-dashboard.html
+++ b/public/student-dashboard.html
@@ -25,7 +25,7 @@
         <div class="container py-4">
             <div class="welcome-section mb-4">
                 <h2>My Packages</h2>
-                <p class="welcome-text text-muted">View your packages ready for pickup</p>
+                <p class="welcome-text" style="color: #c4c9d4;">View your packages ready for pickup</p>
             </div>
 
             <div class="mb-4">
@@ -45,7 +45,7 @@
             <div id="noPackagesMessage" class="no-packages text-center py-5">
                 <span class="icon-large">📭</span>
                 <h3 class="mt-3">No Packages Available</h3>
-                <p class="text-muted">You don't have any packages ready for pickup at this time.</p>
+                <p style="color: #c4c9d4;">You don't have any packages ready for pickup at this time.</p>
             </div>
         </div>
     </div>
