--- a/public/worker-dashboard.html
+++ b/public/worker-dashboard.html
@@ -130,7 +130,7 @@
                         <div class="col-12 col-lg-8">
                             <div class="scan-card p-4">
                                 <h3 class="mb-3">Barcode Scanner</h3>
-                                <p class="scan-instructions mb-4">Use your device camera to scan barcode or enter manually</p>
+                                <p class="scan-instructions mb-4">Align the shipping label barcode horizontally within the scan box</p>
 
                                 <!-- Camera Scanner -->
                                 <div id="reader" style="width: 100%; margin-bottom: 20px;"></div>
